--- a/index.html
+++ b/index.html
@@ -271,13 +271,13 @@ diaObj.mes = data.getMonth();
 <script>
 // ======= scale.js embutido =======
 const funcoesArray = [
-  {id: 11, descricao:  'Cerimoniário', color:'#6d6d6d' },
+  {id: 11, descricao:  'Cerimoniário', color:'#77181e' },
   {id: 0,  descricao:  'Librífero', color: '#0EA54C'},
   {id: 1,  descricao:  'Ambão', color:'#d50201'},
   {id: 2,  descricao:  'Credência', color:  '#0066FF'},
   {id: 3,  descricao:  'Manustérgio', color: '#0066FF'},
   {id: 4,  descricao:  'Turiferário', color:  '#000000'},
-  {id: 5,  descricao:  'Naviculário', color:  '#5FE1F5'},
+  {id: 5,  descricao:  'Naviculário', color:  '#69a2a8'},
   {id: 6,  descricao:  'Carrilhão', color:  '#F5562A'},
   {id: 7,  descricao:  '1ª Leitura', color:'#EAA812' },
   {id: 8,  descricao:  '2ª Leitura', color:'#87039B' },
