--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ const funcoesArrayDatashow = [
         semanaBg: '#BE0579',
         semanaText: '#ffffff'
       },
-      datasho: {
+      datashow: {
         headerBg: '#dc3545',
         headerText: '#ffffff',
         diaBg: '#f8d7da',
