--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <option value="acolitos">Acólitos</option>
         <option value="coroinhas">Coroinhas</option>
-        <option value="datashoW">DatashoW</option>
+        <option value="datashow">DatashoW</option>
       </select>
     </div>
     <div class="col-md-3">
