--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
   {id: 3,  descricao:  'Manustérgio', color: '#0066FF'},
   {id: 4,  descricao:  'Turiferário', color:  '#000000'},
   {id: 5,  descricao:  'Naviculário', color:  '#69a2a8'},
-  {id: 6,  descricao:  'Carrilhão', color:  '#F5562A'},
+  {id: 6,  descricao:  'Cruciferário', color:  '#F5562A'},
+  {id: 12,  descricao:  'Ceroferário', color:  '#3F51B5'},
   {id: 7,  descricao:  '1ª Leitura', color:'#EAA812' },
   {id: 8,  descricao:  '2ª Leitura', color:'#87039B' },
   {id: 9,  descricao:  'Preces', color:'#634133' },
@@ -78,7 +79,8 @@ const funcoesArrayAcolitos = [
   {id: 3,  descricao:  'Manustérgio', color: '#0066FF'},
   {id: 4,  descricao:  'Turiferário', color:  '#000000'},
   {id: 5,  descricao:  'Naviculário', color:  '#69a2a8'},
-  {id: 6,  descricao:  'Carrilhão', color:  '#F5562A'},
+  {id: 6,  descricao:  'Cruciferário', color:  '#F5562A'},
+    {id: 12,  descricao:  'Ceroferário', color:  '#3F51B5'},
   {id: 7,  descricao:  '1ª Leitura', color:'#EAA812' },
   {id: 8,  descricao:  '2ª Leitura', color:'#87039B' },
   {id: 9,  descricao:  'Preces', color:'#634133' },
@@ -524,3 +526,4 @@ function editar(element) {
 
 </body>
 </html>
+
