--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@ function generateCalendar(array) {
         if (dia.events.length == 3) colSize = '6';
         if (dia.events.length == 5) colSize = '4';
         if (dia.events.length == 5 && event.local =='Paróquia') colSize = '6';
-
+     if (dia.events.length == 3 && event.local == 'Paróquia') colSize = '12';
         if (dia.events.length == 1) colSize = '12';
         html += `<div class="col-${colSize}"><h2 class="text-uppercase local">${event.local}-${formatarHorario(event.horario)}</h2>`;
       }
@@ -526,6 +526,7 @@ function editar(element) {
 
 </body>
 </html>
+
 
 
 
