--- a/index.html
+++ b/index.html
@@ -451,13 +451,13 @@ function generateCalendar(array) {
 
       let style = dia.events.length == 2 ? 'style="height: auto !important; margin-bottom: 10px;"' : '';
       if (event.funcoes.length > 5) {
-        html += '<div class="d-flex justify-content-around"><div class="col-7 text-center event" ' + style + '>';
+        html += '<div class="d-flex justify-content-around"><div class="col-4 text-center event" ' + style + '>';
         let contFun = 0;
         for (const funcoes of event.funcoes) {
           html += `<h2 onblur=editar(this) contenteditable class="names" style="color:${funcoesArray.find(p => p.id == funcoes.id).color};" data-name="${funcoes.nome}" data-cod="${dia.dia}/${cont}/${contFun}">${funcoes.nome}</h2>`;
           contFun++;
-          if (contFun == 4 || contFun == 8) {
-            html += '</div><div class="col-6 text-center event" ' + style + '>';
+          if (contFun == 5 || contFun == 10 || contFun == 15) {
+            html += '</div><div class="col-4 text-center event" ' + style + '>';
           }
         }
         html += '</div>';
@@ -526,6 +526,7 @@ function editar(element) {
 
 </body>
 </html>
+
 
 
 
