--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@ function generateCalendar(array) {
      if (dia.events.length == 3 && event.local == 'Paróquia') colSize = '12';
          if (dia.events.length == 3 && event.local == 'Paróquia' && event.funcoes.length < 6) colSize = '6';
          if (dia.events.length == 3 && event.local == 'S. Miguel' && event.funcoes.length < 6) colSize = '6';
+          if (dia.events.length == 3 && event.local == 'S. Miguel' && grupo == 'coroinhas') colSize = '12';
         if (dia.events.length == 1) colSize = '12';
         html += `<div class="col-${colSize}"><h2 class="text-uppercase local">${event.local}-${formatarHorario(event.horario)}</h2>`;
       }
@@ -528,6 +529,7 @@ function editar(element) {
 
 </body>
 </html>
+
 
 
 
